# advent-of-management

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
assets/: play.html
docs/: SPEC.md
prompts/: clause_prompt.md  clause_prompt_claude.md  clause_prompt_local.md  scenario_prompt.md  solver_prompt.md
s3_content/: cast.md  game_rules.md  openapi.yaml  tone_guide.md
scenarios/2025/: day1.json  manifest.json
scripts/: solve_daily.sh
solutions/: .gitignore
solutions/2025/day01/: solution.py
solutions/2025/day02/: solution.py
solutions/2025/day03/: solution.py
solutions/2025/day04/: solution.py
solutions/2025/day05/: solution.py
solutions/2025/day06/: solution.py
solutions/2025/day07/: solution.py
solutions/2025/day08/: solution.py
solutions/2025/day09/: solution.py
solutions/2025/day10/: solution.py
solutions/2025/day11/: solution.py
solutions/2025/day12/: solution.py
src/: __init__.py  aoc_client.py  main.py  publisher.py  scenario_gen.py  solve_aoc.py  solver.py
